// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Password > should allow for overriding the visibility button props 1`] = `
<button
  aria-label="Show password"
  aria-pressed="false"
  class="rmd-button rmd-button--icon rmd-interaction-surface rmd-password__toggle"
  id="password-:ra:-toggle"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    remove_red_eye
  </span>
</button>
`;

exports[`Password > should allow for overriding the visibility button props 2`] = `
<button
  aria-label="Show password"
  aria-pressed="false"
  class="rmd-button rmd-button--icon rmd-button--icon-square rmd-interaction-surface rmd-password__toggle custom-class-name"
  id="custom-id"
  type="button"
>
  <span>
    Toggle
  </span>
</button>
`;

exports[`Password > should allow for overriding the visibility button props 3`] = `
<button
  aria-label="Show password"
  aria-pressed="true"
  class="rmd-button rmd-button--icon rmd-button--icon-square rmd-interaction-surface rmd-password__toggle custom-class-name"
  id="custom-id"
  type="button"
>
  <span>
    Toggle
  </span>
</button>
`;

exports[`Password > should apply the correct styles, HTMLAttributes, and allow a ref 1`] = `
<input
  class="rmd-text-field rmd-text-field--placeholder-hidden rmd-password__input"
  id="text-field-:r1:"
  name="password"
  placeholder=" "
  type="password"
/>
`;

exports[`Password > should apply the correct styles, HTMLAttributes, and allow a ref 2`] = `
<input
  class="rmd-text-field rmd-text-field--placeholder-hidden rmd-password__input"
  id="text-field-:r1:"
  name="password"
  placeholder=" "
  type="password"
/>
`;

exports[`Password > should apply the correct styles, HTMLAttributes, and allow a ref 3`] = `
<input
  class="rmd-text-field rmd-text-field--placeholder-hidden rmd-password__input input-class-name"
  id="text-field-:r1:"
  name="password"
  placeholder=" "
  type="password"
/>
`;
